Tue Jul 25 10:10:22 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/paramcore.c: updated

Mon Jul 24 11:39:13 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/prepclose.c:
	- test with SQLExecDirect

Mon Jul 17 15:18:48 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/dblib/unittests/build_dsw.pl(removed):
	* win32/build_dsw.pl(added) src/dblib/unittests/Makefile.am:
	* src/odbc/unittests/Makefile.am:
	- add a Makefile target to build projects for msvc6

Thu Jul 13 10:20:45 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/unittests/moreandcount.c:
	- remove next_row_count, now useless... rpc.c works the same

Wed Jul 12 13:23:43 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/odbc/odbc.c src/tds/token.c:
	- use TDS_NO_COUNT instead of bad rows_affected for next_row_count. 
	- src/odbc/unittests/rpc.c now works

Wed Jul 12 16:15:14 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/test-other.sh: add file log
	* src/odbc/unittests/rpc.c: fix uninitialized error

Tue Jul 11 17:52:43 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/odbc/odbc.c src/odbc/unittests/rpc.c:
	- Better logging

Tue Jul 11 17:28:34 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/dblib/unittests/done_handling.c: improve

Tue Jul 11 17:27:26 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/paramcore.c:
	- fix compatibility with sybase

Tue Jul 11 11:56:53 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* misc/online.pl: generate more friendly names

Mon Jul 10 17:07:00 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/tds/token.c src/dblib/dblib.c src/dblib/unittests/rpc.c
	- dbresults does not return on DONEPROC

Sun Jul 09 12:52:45 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* doc/Makefile.am: fix compatibility problem
	* src/odbc/unittests/rpc.c: fix warning
